경로테스트3

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <title>김지원 포트폴리오</title>
 
     <!-- 파비콘 -->
-    <link rel="icon" type="image/x-icon" href="/img/favicon.svg">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.svg">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/reset.css" type="text/css">
-    <link rel="stylesheet" href="/css/common.css" type="text/css">
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./css/reset.css" type="text/css">
+    <link rel="stylesheet" href="./css/common.css" type="text/css">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
 
 </head>
 <body>
@@ -36,10 +36,10 @@
                     <article class="main-title">
                         <div class="img-box">
                             <div class="heart">
-                                <img src="/img/main/main_heart.png" alt="하트">
+                                <img src="./img/main/main_heart.png" alt="하트">
                             </div>
                             <div class="hand">
-                                <img src="/img/main/main_hand.png" alt="손">
+                                <img src="./img/main/main_hand.png" alt="손">
                             </div>
                         </div>
                         <h1>I’m Ready!</h1>
@@ -56,9 +56,9 @@
                     <article class="project-container">    
                         <ul id="scroll-project" class="list project">
                             <li>
-                                <a href="/page/project/01.html">
+                                <a href="./page/project/01.html">
                                     <div class="thumbnail">
-                                        <img src="/img/main/project_01.png" alt="부산학력개발원 진학 PEN AI">
+                                        <img src="./img/main/project_01.png" alt="부산학력개발원 진학 PEN AI">
                                     </div>
                                     <dl>
                                         <dt>부산학력개발원 진학 PEN AI</dt>
@@ -67,9 +67,9 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/page/project/02.html">
+                                <a href="./page/project/02.html">
                                     <div class="thumbnail">
-                                        <img src="/img/main/project_02.png" alt="인천사이버진로교육원">
+                                        <img src="./img/main/project_02.png" alt="인천사이버진로교육원">
                                     </div>
                                     <dl>
                                         <dt>인천사이버진로교육원</dt>
@@ -78,9 +78,9 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/page/project/03.html">
+                                <a href="./page/project/03.html">
                                     <div class="thumbnail">
-                                        <img src="/img/main/project_03.png" alt="교육현안 해결형 프로젝트">
+                                        <img src="./img/main/project_03.png" alt="교육현안 해결형 프로젝트">
                                     </div>
                                     <dl>
                                         <dt>교육현안 해결형 프로젝트</dt>
@@ -89,9 +89,9 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/page/project/04.html">
+                                <a href="./page/project/04.html">
                                     <div class="thumbnail">
-                                        <img src="/img/main/project_04.png" alt="LINC3.0 공유·협업 플랫폼">
+                                        <img src="./img/main/project_04.png" alt="LINC3.0 공유·협업 플랫폼">
                                     </div>
                                     <dl>
                                         <dt>LINC3.0 공유·협업 플랫폼</dt>
@@ -101,9 +101,9 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/page/project/05.html">
+                                <a href="./page/project/05.html">
                                     <div class="thumbnail">
-                                        <img src="/img/main/project_05.png" alt="DX아카데미 전용 플랫폼">
+                                        <img src="./img/main/project_05.png" alt="DX아카데미 전용 플랫폼">
                                     </div>
                                     <dl>
                                         <dt>DX아카데미 전용 플랫폼</dt>
@@ -112,9 +112,9 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/page/project/06.html">
+                                <a href="./page/project/06.html">
                                     <div class="thumbnail">
-                                        <img src="/img/main/project_06.png" alt="디지털배움터 웹애뮬레이터">
+                                        <img src="./img/main/project_06.png" alt="디지털배움터 웹애뮬레이터">
                                     </div>
                                     <dl>
                                         <dt>디지털배움터 웹애뮬레이터</dt>
@@ -123,9 +123,9 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/page/project/07.html">
+                                <a href="./page/project/07.html">
                                     <div class="thumbnail">
-                                        <img src="/img/main/project_07.png" alt="스마트소셜 홈페이지">
+                                        <img src="./img/main/project_07.png" alt="스마트소셜 홈페이지">
                                     </div>
                                     <dl>
                                         <dt>스마트소셜 홈페이지</dt>
@@ -134,9 +134,9 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/page/project/08.html">
+                                <a href="./page/project/08.html">
                                     <div class="thumbnail">
-                                        <img src="/img/main/project_08.png" alt="캠바이오넷">
+                                        <img src="./img/main/project_08.png" alt="캠바이오넷">
                                     </div>
                                     <dl>
                                         <dt>캠바이오넷</dt>
@@ -150,7 +150,7 @@
                             <li>
                                 <a href="javascript:popupOpen(0);">
                                     <div class="thumbnail">
-                                        <img src="/img/main/work_01.png" alt="포스터 디자인">
+                                        <img src="./img/main/work_01.png" alt="포스터 디자인">
                                     </div>
                                     <dl>
                                         <dt>포스터 디자인</dt>
@@ -161,7 +161,7 @@
                             <li>
                                 <a href="javascript:popupOpen(1);">
                                     <div class="thumbnail">
-                                        <img src="/img/main/work_02.png" alt="배너 & 현수막 디자인">
+                                        <img src="./img/main/work_02.png" alt="배너 & 현수막 디자인">
                                     </div>
                                     <dl>
                                         <dt>배너 & 현수막 디자인</dt>
@@ -172,7 +172,7 @@
                             <li>
                                 <a href="javascript:popupOpen(2);">
                                     <div class="thumbnail">
-                                        <img src="/img/main/work_03.png" alt="영상 디자인">
+                                        <img src="./img/main/work_03.png" alt="영상 디자인">
                                     </div>
                                     <dl>
                                         <dt>영상 디자인</dt>
@@ -189,7 +189,7 @@
             <!-- S : floating -->
             <div class="floating-wrap">
                 <a href="javascript:" class="btn-float">
-                    <img src="/img/ico_chevron_up.svg" alt="상단으로">
+                    <img src="./img/ico_chevron_up.svg" alt="상단으로">
                 </a>
             </div>
             <!-- E : floating -->
@@ -199,11 +199,11 @@
                 <div class="popup">
                     <div class="popup-header">
                         <a href="javascript:" class="popup-close">
-                            <img src="/img/ico_close.svg" alt="팝업닫기">
+                            <img src="./img/ico_close.svg" alt="팝업닫기">
                         </a>
                     </div>
                     <div class="popup-content">
-                        <img src="/img/main/popup_work_01.png" alt="포스터 디자인 모음">
+                        <img src="./img/main/popup_work_01.png" alt="포스터 디자인 모음">
                     </div>
                 </div>
             </div>
@@ -214,11 +214,11 @@
                 <div class="popup">
                     <div class="popup-header">
                         <a href="javascript:" class="popup-close">
-                            <img src="/img/ico_close.svg" alt="팝업닫기">
+                            <img src="./img/ico_close.svg" alt="팝업닫기">
                         </a>
                     </div>
                     <div class="popup-content">
-                        <img src="/img/main/popup_work_02.png" alt="배너&현수막 디자인 모음">
+                        <img src="./img/main/popup_work_02.png" alt="배너&현수막 디자인 모음">
                     </div>
                 </div>
             </div>
@@ -229,11 +229,11 @@
                 <div class="popup">
                     <div class="popup-header">
                         <a href="javascript:" class="popup-close">
-                            <img src="/img/ico_close.svg" alt="팝업닫기">
+                            <img src="./img/ico_close.svg" alt="팝업닫기">
                         </a>
                     </div>
                     <div class="popup-content">
-                        <img src="/img/main/popup_work_03.png" alt="영상 디자인 모음">
+                        <img src="./img/main/popup_work_03.png" alt="영상 디자인 모음">
                     </div>
                 </div>
             </div>
@@ -243,6 +243,6 @@
 
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="/js/common.js" type="text/javascript"></script>
+    <script src="./js/common.js" type="text/javascript"></script>
 </body>
 </html>
